--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -2,7 +2,7 @@
 
 .main {
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
 
     display: flex;
     justify-content: center;
